# fastapi-openai

./: pyproject.toml
src/: app.py
src/routers/: chat.py
src/services/: chat.py
